# NagleChess

./: .gitignore  CMakeCache.txt  CMakeLists.txt  GameState.d  Makefile  NagleChess  Notes.txt  PlayerState.d  README.md
app/: CMakeLists.txt  main.cpp
include/: Bishop.h  Fen.h  GameState.h  King.h  Knight.h  Move.h  Pawn.h  Piece.h  PieceHelper.h  PlayerState.h  Queen.h  Rook.h  StartingValues.h
src/: Bishop.cpp  CMakeLists.txt  Fen.cpp  GameState.cpp  King.cpp  Knight.cpp  Move.cpp  Pawn.cpp  PieceHelper.cpp  PlayerState.cpp  Queen.cpp  Rook.cpp  main.cpp
src/include/: game_state.h  player_state.h  starting_values.h
tests/: BishopAdHocTests.cpp  CMakeLists.txt  FenAdHocTests.cpp  GameStateAdHocTests.cpp  GameStateTest.cpp  KingAdHocTests.cpp  PawnAdHocTests.cpp  QueenAdHocTests.cpp  RookAdHocTests.cpp  StartingValuesAdHocTests.cpp
