add_executable(GameStateAdHocTests GameStateAdHocTests.cpp)
add_executable(FenAdHocTests FenAdHocTests.cpp)
add_executable(StartingValuesAdHocTests StartingValuesAdHocTests.cpp)
add_executable(PawnAdHocTests PawnAdHocTests.cpp)
add_executable(RookAdHocTests RookAdHocTests.cpp)
add_executable(BishopAdHocTests BishopAdHocTests.cpp)
add_executable(QueenAdHocTests QueenAdHocTests.cpp)

target_link_libraries(GameStateAdHocTests LINK_PUBLIC GameState)
target_link_libraries(FenAdHocTests LINK_PUBLIC GameState)
target_link_libraries(StartingValuesAdHocTests LINK_PUBLIC GameState)
target_link_libraries(PawnAdHocTests LINK_PUBLIC GameState)
target_link_libraries(RookAdHocTests LINK_PUBLIC GameState)
target_link_libraries(BishopAdHocTests LINK_PUBLIC GameState)
target_link_libraries(QueenAdHocTests LINK_PUBLIC GameState)